Fix Composed Chart tooltip text align

--- a/src/Components/ComposedChart/OpiumComposedChart.scss
+++ b/src/Components/ComposedChart/OpiumComposedChart.scss
@@ -41,6 +41,10 @@
         line-height: 12px;
       }
 
+      .field-name {
+        margin-right: 10px;
+      }
+
       &:not(:last-child) {
         margin-bottom: 0.5rem;
       }
